--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -25,7 +25,10 @@
         <textarea name="comment" rows="2" cols="50"></textarea>
         <input type="submit" value="Submit">
       </form>
-      <button type="button" name="comments" class="commentBtn" id={{_id}}>Show Comments</button>
+      <button type="button" name="comments" class="commentBtn" data-id={{_id}}>Show Comments</button>
+      <div id="{{_id}}"class="comments">
+
+      </div>
     </div>
   {{/each}}
 </div>
